WIP: Statistics completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner type="ball-atom"></ngx-spinner>
 <app-toolbar></app-toolbar>
 
-<router-outlet></router-outlet>
+<app-advanced-search>
+  <router-outlet></router-outlet>
+</app-advanced-search>
