--- a/src/app/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/shared/components/toolbar/toolbar.component.scss
@@ -1,5 +1,5 @@
 .toolbar-button-row {
-  display: table-cell;
+  display: flex;
   height: 100%;
 }
 
@@ -13,6 +13,10 @@ mat-toolbar {
   position: sticky;
   top: 0;
   z-index: 1000;
+}
+
+.mat-toolbar.mat-primary {
+  color: #000;
 }
 
 div {
