--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,22 +1,5 @@
 <div class="container">
-  <div class="search-div-dim">
-    <form [formGroup]="searchForm">
-      <mat-form-field appearance="fill" class="button-width">
-        <mat-label>Search By</mat-label>
-        <mat-select formControlName="searchType">
-          <mat-option value="keyword">Keyword</mat-option>
-          <mat-option value="file">File</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field appearance="fill" class="search-width">
-        <mat-label>Search PDB</mat-label>
-        <input matInput formControlName="searchField" type="text">
-        <button mat-icon-button matSuffix>
-          <mat-icon>search</mat-icon>
-        </button>
-      </mat-form-field>
-    </form>
-  </div>
+  <app-search-bar></app-search-bar>
 </div>
 
 <!-- <div class="search-container">
